--- a/index.html
+++ b/index.html
@@ -5,22 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Gestionnaire de Tâches</title>
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Gestionnaire de tâches</h1>
+            <h2>Gestionnaire de tâches</h2>
         </header>
     
         <form>
-            <input type="text" placeholder="Titre..." class="todo-input">
+            <input type="text" placeholder="Titre..." class="todo-input"> <br>
             <button class="todo-button" type="submit"> Ajouter </button>
         </form>
-    </div>
+    
 
-    <div class="todo-container">
-        <ul class="todo-list"></ul>
+        <div class="todo-container">
+            <ul class="todo-list"></ul>
+        </div>
     </div>
 
     <script src="script.js"></script>
