Ajout d'un h3 pour récupérer les tâches

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     
 
         <div class="todo-container">
+            <h3 class="tache"></h3>
             <ul class="todo-list"></ul>
         </div>
     </div>
