--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
             <ul class="todo-list"></ul>
         </div>
     </div>
-
+    <div class="todo">
+        <button class="completebtn"></button>
+        
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
